admission/ValidatingAdmissionPolicy/policies/hostpid/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpid-pod
  annotations:
    kubeapt.io/uuid: "23ef68db-2409-43a1-854d-c46477a533a9"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  hostPID: true
